# rust-demo

./: .gitignore  Cargo.toml  LICENSE  README.md
data/: fruit.sql  index.m3u8
src/: core.rs  db.rs  encoding.rs  error.rs  fs.rs  log.rs  main.rs
src/cmd/basic/src/: main.rs
src/cmd/clap-demo/: Cargo.toml
src/cmd/clap-demo/src/: main.rs
src/cmd/color-eyre-demo/: Cargo.toml
src/cmd/stack/: Cargo.toml
src/cmd/stack/src/: main.rs
src/cmd/structopt-demo/: Cargo.toml
src/core/struct_demo/: reference.rs
src/crypto/hash/: sha1.rs
src/db/: orm.rs
src/db/mongodb/: demo.rs
src/db/orm/: sea_orm.rs
src/db/orm/sea_orm/: demo.rs  user.rs
src/encoding/toml/: toml.rs
src/error/: anyhow.rs
src/fs/: dirs.rs  file_async.rs
src/log/: color_eyre.rs  tracing.rs
src/net/http/: client.rs
src/net/http/client/: aliyundrive.rs  reqwest.rs  test.rs
src/os/: info.rs
src/validate/: validator.rs
src/web/: axum.rs
