[package]
name = "rust-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#reqwest = "0.11.22"
#tokio = "1.33.0"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
#reqwest = { version = "0.11", features = ["json"] }
