[package]
name = "rust-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#reqwest = "0.11.22"
#tokio = "1.33.0"

reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
http = "0.2.9"
serde_json = "1.0.107"
base64 = { version = "0.21.5", features = [] }
openssl = "0.10.57"
serde = { version = "1.0.190", features = ["derive"] }
bytes = "1.5.0"
walkdir = "2.4.0"
sha1 = "0.10.6"
hex-literal = "0.4.1"
hex = "0.4.3"

[workspace]
#resolver = "2"
members = [
    "src/cmd/basic",
    "src/cmd/clap-demo",
    "src/cmd/structopt-demo",
]
