[package]
name = "rust-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] } #打印调用栈
#anyhow = "1.0.75"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
tokio = { version = "1.33.0", features = ["full"] }
http = "0.2.9"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
base64 = { version = "0.21.5", features = [] }
openssl = "0.10.57"
bytes = "1.5.0"
walkdir = "2.4.0"
sha1 = "0.10.6"
hex-literal = "0.4.1"
hex = "0.4.3"
sea-orm = { version="0.12.4", features = ["sqlx-sqlite", "runtime-tokio-rustls"]}
axum = "0.6.20"
mongodb = "2.7.1"
futures = "0.3.29"
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace", "catch-panic"] }
color-eyre = "0.6.2"
backtrace = "0.3.69"


[workspace]
#resolver = "2"
members = [
    "src/cmd/basic",
    "src/cmd/stack",
    "src/cmd/clap-demo",
    "src/cmd/structopt-demo",
    "src/cmd/color-eyre-demo",
]

[profile.release]
debug = true
