[package]
name = "color-eyre-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# RUST_BACKTRACE=1 RUST_SPANTRACE=0 cargo run --color=always --bin color-eyre-demo --manifest-path /Users/wyb/RustroverProjects/rust-demo/src/cmd/color-eyre-demo/Cargo.toml
# RUST_BACKTRACE=1 RUST_SPANTRACE=0 cargo run -r
# RUST_BACKTRACE=1 RUST_SPANTRACE=0 cargo run --release --profile=release --color=always --bin color-eyre-demo --manifest-path /Users/wyb/RustroverProjects/rust-demo/src/cmd/color-eyre-demo/Cargo.toml
